plugins {
	id 'java-library'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'org.springframework.boot' version '2.5.6'
    id 'maven-publish'
    id 'signing'
}

description = "拧螺丝的好扳手"

ext {
    libraries = [
        junitVersion = '5.8.1'
    ]

	lib = [
			"mybatis-plus"				            : 	"com.baomidou:mybatis-plus-boot-starter:3.4.2",
            "pagehelper"                            :   "com.github.pagehelper:pagehelper-spring-boot-starter:1.4.0",
			"lombok"              					:	"org.projectlombok:lombok:1.18.22",
            "mysql-connector-java"                  :   "mysql:mysql-connector-java",
            // JUnit 5 Jupiter API
            "junit-jupiter-api"                     :   "org.junit.jupiter:junit-jupiter-api:${junitVersion}",
            // JUnit 5 的测试引擎 engine
            "junit-jupiter-engine"                  :   "org.junit.jupiter:junit-jupiter-engine:${junitVersion}",

    ]
}

// 所有项目配置
allprojects {
	group = 'io.github.maodua'
	version = '1.1.0.JDK8'

	java {
		sourceCompatibility = JavaVersion.VERSION_1_8
		targetCompatibility = JavaVersion.VERSION_1_8
		withJavadocJar()
		withSourcesJar()
	}

	repositories {
		mavenLocal()
		maven { url "https://maven.aliyun.com/nexus/content/groups/public" }
		maven { url "https://maven.aliyun.com/nexus/content/repositories/gradle-plugin" }
		mavenCentral()
        // spring 仓库
        maven { url 'https://repo.spring.io/milestone' }
        maven { url 'https://repo.spring.io/snapshot' }
	}
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'maven-publish'
    apply plugin: 'signing'

    jar {
        enabled = true
        // jar文件名中删除 `plain` 后缀
        archiveClassifier.set("")
    }
    bootJar {
        enabled = false
    }

    // java 编码
    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
        options.warnings = false
        options.deprecation = true
        options.compilerArgs += ["-parameters"]
    }

    test {
        // 使用JUnit平台
        useJUnitPlatform()
    }

    dependencies {
        api                     "org.springframework.boot:spring-boot-starter"
        annotationProcessor     "org.springframework.boot:spring-boot-configuration-processor"
        compileOnly             "org.springframework.boot:spring-boot-configuration-processor"
        annotationProcessor     "org.projectlombok:lombok"
        compileOnly             "org.projectlombok:lombok"

        testAnnotationProcessor "org.projectlombok:lombok"
        testCompileOnly         "org.projectlombok:lombok"
        // spring-boot-test 中已经包含 junit
        testImplementation      "org.springframework.boot:spring-boot-starter-test"
    }

    // 发版
    publishing {
        publications {
            mavenJava(MavenPublication) {
                from components.java
                artifact sourcesJar
                artifact javadocJar
                versionMapping {
                    usage('java-api') {
                        fromResolutionOf('runtimeClasspath')
                    }
                    usage('java-runtime') {
                        fromResolutionResult()
                    }
                }
                pom {
                    name = 'wrench'
                    description = '🔧 拧螺丝的好扳手'
                    url = 'https://github.com/maodua/wrench'

                    licenses {
                        license {
                            name = 'The Apache License, Version 2.0'
                            url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
                        }
                    }
                    // 开发者信息
                    developers {
                        developer {
                            id = 'sch'
                            name = 'shanchanghui'
                            email = 'changhui.shan@qq.com'
                        }
                    }
                    // SCM配置
                    scm {
                        connection = 'scm:git:git://github.com/maodua/wrench.git'
                        developerConnection = 'scm:git:ssh://github.com:maodua/wrench.git'
                        url = 'https://github.com/maodua/wrench/tree/main'
                    }
                }
            }
        }
        // 仓库信息
        repositories {
            maven {
                def releasesRepoUrl = 'https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/'
                def snapshotsRepoUrl = 'https://s01.oss.sonatype.org/content/repositories/snapshots/'
                url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl

                credentials {
                    username ossrh_username
                    password ossrh_password
                }
            }
        }

    }

    // 签名
    signing {
        sign publishing.publications.mavenJava
    }

    javadoc {
        // 防止本地打开中文乱码
        options.addStringOption("charset", "UTF-8")
        if(JavaVersion.current().isJava9Compatible()) {
            options.addBooleanOption('html5', true)
        }
    }

}
